--- a/cs/book/가상 면접 사례로 배우는 대규모 시스템 설계 기초.md
+++ b/cs/book/가상 면접 사례로 배우는 대규모 시스템 설계 기초.md
@@ -22,3 +22,20 @@
 	- 미들웨어 서버를 통한 제한 or 어플리케이션 내부에 넣기(API 게이트웨이)
 	- 특정 유저의 처리량을 제한 o한 전체의 요청을 제한할수도 있음
 	- 마이크로 서비스라면 알고리즘을 위한 데이터 저장은 redis 같은 캐쉬
+- 5장: 안정 해시 설계
+	- 서버가 추가되거나 삭제될때 재배치되는 키의 수가 최소화 됨
+	- 데이터가 보다 균등하게 배포
+	- 핫스팟 키 문제를 줄임(유명인의 데이터가 전부 같은 샤드에 몰리는 상황 등)
+- 6장: 키-값 저장소 설계
+	- 대규모 데이터 저장: 안정해시를 사용해 서버들에 부하 분산
+	- 읽기 연산에 대한 높은 가용성 보장: 데이터를 여러 데이터센터에 다중화
+	- 쓰기 연산에 대한 높은 가용성 보장: 버저닝 및 백터 시계를 사용한 충돌 해소
+	- 데이터 파티션, 점진적 규모 확장성, 다양성: 안정 해시
+	- 조절 가능한 데이터 일관성: 정족수 합의
+	- 일시적 장애 처리: 느슨한 정족수 프로토콜과 단서 후 임시 위탁
+	- 영구적 장애 처리: 머클 트리
+	- 데이터 센터 장애 대응: 여러 데이터 센터에 걸친 데이터 다중화
+- 7장: 분산 시스템을 위한 유일 ID 생성기 설계
+	- 다중 마스터 복제, UUID, 티켓 서버, 트위터 스노플레이크 방식
+- 8장: URL 단축기
+	- 베이스 62변환 or 여러 해시 함수
