add. done read book

--- a/cs/book/가상 면접 사례로 배우는 대규모 시스템 설계 기초.md
+++ b/cs/book/가상 면접 사례로 배우는 대규모 시스템 설계 기초.md
@@ -39,3 +39,5 @@
 	- 다중 마스터 복제, UUID, 티켓 서버, 트위터 스노플레이크 방식
 - 8장: URL 단축기
 	- 베이스 62변환 or 여러 해시 함수
+
+> 후기: 뒤로 갈수록 잘 모르는 프로토콜들이 있어서, 마지막 장에 여러 사이트들 article들을 더 공부해야할듯
